apps/production/radarr/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: arr
spec:
  tls:
    - hosts:
        - &host radarr.fanen.dk
      secretName: radarr-fanen-dk-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  name: http
