apps/production/radarr/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-route
  namespace: radarr
spec:
  hostnames:
    - radarr.fanen.dk
